# zero2prod

./: README.md
zero2prod/: Cargo.toml
zero2prod/configuration/: configuration.yaml
zero2prod/migrations/: 20260128025436_create_subscriptions_table.sql
zero2prod/scripts/: init_db.sh
zero2prod/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
zero2prod/src/routes/: health_check.rs  mod.rs  subscriptions.rs
zero2prod/tests/: health_check.rs
