[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
config = "0.15.19"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", default-features=false, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "migrate"] }
sqlx-cli = { version = "0.8.6", default-features = false, features = [ "rustls", "postgres"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

